tests/paczka2/big_fuzzy/60272063.err
Error in line 2: mQFee3TuRYk A539 41,8
Error in line 14: mQFee3TuRYk A539 71,10
Error in line 13: LyRtJN S218 6,1
Error in line 19: kgQv A539 14,8
Error in line 5: 6YnXmt8agQ A539 82,1
Error in line 28: 3z4nPbc8ed A539 16,4
Error in line 36: 3z4nPbc8ed S218 93,5
Error in line 40: 3z4nPbc8ed A539 17,81
Error in line 43: S120 A7 -2,0
Error in line 34: S120 A7 98,2
Error in line 32: 6YnXmt8agQ S120 28,7
Error in line 55: rpVI39uV96F A7 -5,7
Error in line 54: rpVI39uV96F A7 72,4
Error in line 56: rpVI39uV96F S218 7,8
Error in line 66: rpVI39uV96F A539 58,2
Error in line 26: kgQv S218 19,9
Error in line 75: S120 A7 86,2
Error in line 86: rpVI39uV96F A7 208,6
Error in line 98: rpVI39uV96F A* 323,2
Error in line 97: rpVI39uV96F A7 77,7
Error in line 101: kgQv A7 70,3
Error in line 105: 6YnXmt8agQ S120 77,0
Error in line 103: LyRtJN A539 32,0
Error in line 119: 6YnXmt8agQ S120 -2,6
Error in line 123: rpVI39uV96F S218 -2,2
Error in line 114: 6YnXmt8agQ S120 45,2
Error in line 122: kgQv S120 68,8
Error in line 121: rpVI39uV96F S218 90,9
Error in line 124: 6YnXmt8agQ A539 4,8
Error in line 129: 6YnXmt8agQ S120 21,0
Error in line 133: 6YnXmt8agQ A7 75,8
Error in line 140: 6YnXmt8agQ A539 0,3
Error in line 143: mQFee3TuRYk A539 79,2
Error in line 148: S120 A539 75,6
Error in line 142: 6YnXmt8agQ S120 51,8
Error in line 134: LyRtJN S120 199,3
Error in line 165: LyRtJN A539 48,4
Error in line 172: 6YnXmt8agQ S218 82,7
Error in line 162: 3z4nPbc8ed S120 2,3
Error in line 184: mQFee3TuRYk A7 80,8
Error in line 185: mQFee3TuRYk A539 30,9
Error in line 190: LyRtJN S218 24,0
Error in line 207: 6YnXmt8agQ S120 42,9
Error in line 208: S120 A7 43,2
Error in line 218: LyRtJN S218 51,2
Error in line 226: LyRtJN S120 94,7
Error in line 239: S120 A7 19,5
Error in line 234: kgQv S120 47,5
